Updating LuaJIT patch and adding additonal prefix for LuaJIT search paths

--- a/interpreters/luajit/Makefile
+++ b/interpreters/luajit/Makefile
@@ -54,6 +54,7 @@ VPATH += $(LUAJIT_UNPACK)/src/host
 CFLAGS += -fomit-frame-pointer -fno-short-enums -DLUAJIT_OS=LUAJIT_OS_NUTTX
 CFLAGS += -D__ARM_ARCH_7M__ -DLUAJIT_NO_UNWIND -DLUAJIT_DISABLE_PROFILE 
 CFLAGS += -DLUAJIT_SECURITY_PRNG=0 -DLUAJIT_SECURITY_MCODE=0
+CFLAGS += -DLUA_ROOT=\"/home\"
 
 PROGNAME  = luajit
 PRIORITY  = $(CONFIG_INTERPRETERS_LUAJIT_PRIORITY)
